@@ -1,3 +1,9 @@
+2011-07-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCralloc.hpp,
+	  src/SDCCicode.c:
+	  Debug message cleanup.
+
 2011-07-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* Merge from trunk.
